# .well-known/openapi.yaml
@@ -1,10 +1,10 @@
 openapi: 3.0.1
 info:
-    title: 单词本
-    description: 个性化的英文单词本，可以增加、删除和浏览单词本中的单词，背单词时从已有单词本中随机抽取单词生成句子或者段落。
+    title: 单词本和知识之书
+    description: 个性化的英文单词本和知识之书工具，可以增加、删除和浏览单词本中的单词，并可以按要求从单词本中随机抽取单词生成句子或段落，也可以帮你答疑解惑
     version: "v1"
 servers:
-    - url: http://120.48.73.108:8081
+    - url: http://127.0.0.1:8081
 paths:
     /get_wordbook:
         get:
@@ -17,6 +17,17 @@ paths:
                         application/json:
                             schema:
                                 $ref: "#/components/schemas/getWordbook"
+    /get_knowledge_book:
+        get:
+            operationId: getKnowledgebook
+            summary: 展示知识之书的内容
+            responses:
+                "200":
+                    description: 知识之书的内容如下
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/getKnowledgebook"
     /generate_sentences:
         post:        
             operationId: generateSentences
@@ -80,6 +91,15 @@ components:
                     items:
                         type: string
                     description: 单词本单词列表
+        getKnowledgebook:
+            type: object
+            required: [ knowledge_book ]
+            properties:
+                wordbook:
+                    type: array
+                    items:
+                        type: string
+                    description: 知识之书
         addWord:
             type: object
             required: [word]
